Fix OData requirement role attribution
